[package]
name = "open_agentic_policy_compiler"
version = "0.1.0"
edition = "2021"
description = "Policy compiler skeleton for governance control plane"
rust-version = "1.74"

[[bin]]
name = "policy-compiler"
path = "src/main.rs"

[lib]
name = "open_agentic_policy_compiler"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
open_agentic_frontmatter = { path = "../shared/frontmatter" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3.27.0"
